--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.tingyugetc520</groupId>
+            <artifactId>dt-java</artifactId>
+            <version>0.1.2</version>
+        </dependency>
 
     </dependencies>
 
